# Multimodal-Lecture-Evaluation-Pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gemini_result.json  main.py  ollama_result.json  pyproject.toml
app/: main.py
app/core/: config.py  llm.py  logging.py  storage.py
app/evaluation/: evaluate.py  grounding.py  handler.py  jobs.py  schemas.py  usecase.py
app/media/: dedupe.py  ffmpeg.py  handler.py  ocr.py  scene_detect.py  schemas.py  transcribe.py  usecase.py
