[project]
name = "multimodal-lecture-evaluation-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "faster-whisper>=1.0.0",
    "minio>=7.2.20",
    "ollama>=0.3.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.20",
    "scenedetect>=0.7",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]
